@@ -104,10 +104,10 @@ class OptimizerTest {
 
         Profile intervals = new Profile(96, 0.25);
 
-        Profile productionProfile = new Profile(Arrays.asList(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.00015, 0.00044, 0.00018, 0.0147, 0.01383, 0.01561, 0.01527, 0.05643, 0.05569, 0.05274, 0.05123, 0.11518, 0.11471, 0.11974, 0.11325, 0.18029, 0.17649, 0.16653, 0.16708, 0.23129, 0.2259, 0.2229, 0.21537, 0.2444, 0.24753, 0.24207, 0.25948, 0.25284, 0.24893, 0.25951, 0.24448, 0.22372, 0.2217, 0.22901, 0.23143, 0.19613, 0.19258, 0.20015, 0.19212, 0.1592, 0.15843, 0.15919, 0.15582, 0.09496, 0.09736, 0.0974, 0.1015, 0.04176, 0.03956, 0.03847, 0.03979, 0.00262, 0.00336, 0.00246, 0.00299, 0.00085, 0.0003, 0.00098, 0.00098, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0));
+        Profile productionProfile = new Profile(Arrays.asList(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.00048, 0.00015, 0.00072, 0.01442, 0.01443, 0.01448, 0.01371, 0.05276, 0.05076, 0.05624, 0.05361, 0.11615, 0.11249, 0.1204, 0.11963, 0.17364, 0.17434, 0.17665, 0.179, 0.21132, 0.21337, 0.22272, 0.23063, 0.26012, 0.25388, 0.2462, 0.25408, 0.24615, 0.2418, 0.25684, 0.25761, 0.23229, 0.22544, 0.22527, 0.24091, 0.20911, 0.19972, 0.20618, 0.20437, 0.16071, 0.14794, 0.14938, 0.15199, 0.09537, 0.09572, 0.09636, 0.1029, 0.04131, 0.04205, 0.0397, 0.04017, 0.00232, 0.00332, 0.00317, 0.00267, 0.00076, 0.00094, 0.00025, 0.00009, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0));
         Production production = new Production(1, "pv production", productionProfile);
 
-        Profile demandProfile = new Profile(Arrays.asList(0.04858, 0.00599, 0.00642, 0.00608, 0.0456, 0.00614, 0.00615, 0.00649, 0.0462, 0.00502, 0.00531, 0.00532, 0.04937, 0.00641, 0.00596, 0.00554, 0.04578, 0.00514, 0.00526, 0.00584, 0.04798, 0.00565, 0.00567, 0.00534, 0.14749, 0.19709, 0.19931, 0.19852, 0.19751, 0.18104, 0.13154, 0.12025, 0.04736, 0.0062, 0.00509, 0.00641, 0.04621, 0.00533, 0.00603, 0.00638, 0.04672, 0.00567, 0.00606, 0.00636, 0.04819, 0.00566, 0.00617, 0.00644, 0.04609, 0.00597, 0.00512, 0.00535, 0.04868, 0.0059, 0.00594, 0.0056, 0.04711, 0.00534, 0.00623, 0.00564, 0.05027, 0.12917, 0.05235, 0.05021, 0.0969, 0.05435, 0.05451, 0.05204, 0.09634, 0.05563, 0.05447, 0.05172, 0.12758, 0.07977, 0.07878, 0.07512, 0.12523, 0.08294, 0.07995, 0.08285, 0.12857, 0.08062, 0.07556, 0.08167, 0.12595, 0.07816, 0.08229, 0.38217, 0.12264, 0.07857, 0.07617, 0.08038, 0.04873, 0.00633, 0.00582, 0.0065));
+        Profile demandProfile = new Profile(Arrays.asList(0.04771, 0.0051, 0.00508, 0.00542, 0.04912, 0.00622, 0.00512, 0.00531, 0.04738, 0.00537, 0.00639, 0.00613, 0.04977, 0.00518, 0.00563, 0.00516, 0.04985, 0.00542, 0.0058, 0.00534, 0.04872, 0.00517, 0.00612, 0.00517, 0.14607, 0.19371, 0.19799, 0.19605, 0.19014, 0.17649, 0.13251, 0.12018, 0.04772, 0.00641, 0.00572, 0.0063, 0.04974, 0.00553, 0.00613, 0.00612, 0.04834, 0.00524, 0.00618, 0.00618, 0.04568, 0.00583, 0.00596, 0.00584, 0.04917, 0.00632, 0.00524, 0.00643, 0.04672, 0.0053, 0.00588, 0.00545, 0.04908, 0.0055, 0.00528, 0.00505, 0.04984, 0.1258, 0.0508, 0.0539, 0.09623, 0.05599, 0.05229, 0.05305, 0.1033, 0.05104, 0.05174, 0.05001, 0.13093, 0.07681, 0.08107, 0.08307, 0.12444, 0.08147, 0.07751, 0.07991, 0.13223, 0.07862, 0.08238, 0.07767, 0.1323, 0.07892, 0.07532, 0.08146, 0.12531, 0.07558, 0.07694, 0.08248, 0.05018, 0.00534, 0.0052, 0.00649));
         Demand demand = new Demand(1, "home demand", demandProfile);
 
         Profile purchasePrice = new Profile(Arrays.asList(0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.58, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37, 0.37));
@@ -144,21 +144,27 @@ class OptimizerTest {
 
         assertEquals(OptimizationStatus.SOLUTION_FOUND, result.getOptimizationStatus());
 
-
         List<ContractResult> contractResults = result.getContractResults();
         StorageResult storageResult = result.getStorageResults().get(0);
 
-        assertEquals(0.186350525, result.getObjectiveFunctionValue(), 1e-2);
+        System.out.println("\ninterval\tproduction\tdemand\tcharge\tdischarge\tenergy\tpurchase\tsell");
+        for (int i=0; i<intervals.getLength(); i++) {
+            System.out.print(i + "\t");
+            System.out.print(productionProfile.getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(demandProfile.getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(storageResult.charge().getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(storageResult.discharge().getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(storageResult.energy().getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(contractResults.get(0).power().getValueForInterval(i).orElse(0.0) + "\t");
+            System.out.print(contractResults.get(1).power().getValueForInterval(i).orElse(0.0) + "\n");
+        }
 
-        List<Double> expectedEnergyResults = Arrays.asList(0.622933, 0.300);
-        resultValidator.assertContractEnergyResults(contractResults, expectedEnergyResults);
+        List<Double> expectedEnergyResults = Arrays.asList(0.620550, 0.311);
+        List<Integer> expectedMovableDemandStartIntervals = List.of(83);
 
-
+        assertEquals(0.186791500, result.getObjectiveFunctionValue(), 1e-3);
         assertEquals(minEnergy, storageResult.energy().getValueForInterval(95).orElse(-1.0), 1e-6);
-
-        List<Integer> expectedMovableDemandStartIntervals = new ArrayList<>();
-        expectedMovableDemandStartIntervals.add(83);
-
+        resultValidator.assertContractEnergyResults(contractResults, expectedEnergyResults);
         resultValidator.assertMovableDemandResults(expectedMovableDemandStartIntervals, result.getMovableDemandResults());
     }
 }
